add: add free slots throughput
