# api/vgsocket/gen-server/models/config_type.go
@@ -33,9 +33,6 @@ const (
 	// ConfigTypeWireguard captures enum value "wireguard"
 	ConfigTypeWireguard ConfigType = "wireguard"
 
-	// ConfigTypeAmneziavpn captures enum value "amneziavpn"
-	ConfigTypeAmneziavpn ConfigType = "amneziavpn"
-
 	// ConfigTypeOutline captures enum value "outline"
 	ConfigTypeOutline ConfigType = "outline"
 
@@ -48,7 +45,7 @@ var configTypeEnum []interface{}
 
 func init() {
 	var res []ConfigType
-	if err := json.Unmarshal([]byte(`["wireguard","amneziavpn","outline","universal"]`), &res); err != nil {
+	if err := json.Unmarshal([]byte(`["wireguard","outline","universal"]`), &res); err != nil {
 		panic(err)
 	}
 	for _, v := range res {
