# api/vgsocket/gen-server/restapi/operations/delete_config_responses.go
@@ -22,6 +22,11 @@ DeleteConfigNoContent No Content
 swagger:response deleteConfigNoContent
 */
 type DeleteConfigNoContent struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.FreeSlots `json:"body,omitempty"`
 }
 
 // NewDeleteConfigNoContent creates DeleteConfigNoContent with default headers values
@@ -30,12 +35,27 @@ func NewDeleteConfigNoContent() *DeleteConfigNoContent {
 	return &DeleteConfigNoContent{}
 }
 
+// WithPayload adds the payload to the delete config no content response
+func (o *DeleteConfigNoContent) WithPayload(payload *models.FreeSlots) *DeleteConfigNoContent {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete config no content response
+func (o *DeleteConfigNoContent) SetPayload(payload *models.FreeSlots) {
+	o.Payload = payload
+}
+
 // WriteResponse to the client
 func (o *DeleteConfigNoContent) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
 	rw.WriteHeader(204)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
 }
 
 // DeleteConfigBadRequestCode is the HTTP code returned for type DeleteConfigBadRequest
