# socket/cmd/vgsocket_service/handlers/userdelete.go
@@ -46,11 +46,14 @@ func DeleteUserHandler(ctx context.Context, logger *slog.Logger, opts *Options,
 		return operations.NewDeleteConfigInternalServerError()
 	}
 
-	if err := vpnconfig.DeleteUser(ctx, logger, &opts.Options, brigadeID, userID); err != nil {
+	slots, err := vpnconfig.DeleteUser(ctx, logger, &opts.Options, brigadeID, userID)
+	if err != nil {
 		if errors.Is(err, core.ErrUserNotFound) {
 			logger.Warn("config not found", "user_id", params.ConfigID)
 
-			return operations.NewDeleteConfigNoContent()
+			return operations.NewDeleteConfigNoContent().WithPayload(&models.FreeSlots{
+				FreeSlots: swag.Int64(int64(slots)),
+			})
 		}
 
 		if errors.Is(err, core.ErrTemporarilyUnavailable) {
@@ -69,5 +72,7 @@ func DeleteUserHandler(ctx context.Context, logger *slog.Logger, opts *Options,
 		return operations.NewDeleteConfigInternalServerError()
 	}
 
-	return operations.NewDeleteConfigNoContent()
+	return operations.NewDeleteConfigNoContent().WithPayload(&models.FreeSlots{
+		FreeSlots: swag.Int64(int64(slots)),
+	})
 }
